PLANET-6308: Fix new EN Form issues
Fix some default values
Fix re render on en_form_id change
Fix sideform centered layout
Fix campaign logo error
Fix content layout and background issues
Layout has to handle newlines and paragraphs
Background for existing blocks doesn't appear before we go to edit mode
The renderView call is unnecessary in editor
Write form data in DOM to be checked by acceptance tests

--- a/assets/src/styles/blocks/ENForm/components/_enform-side-style.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform-side-style.scss
@@ -70,6 +70,10 @@
     margin-top: 0;
     margin-bottom: 0;
 
+    margin-left: calc(((100vw - 100%) / 2) * -1);
+    padding-left: calc(((100vw - 100%) / 2));
+    padding-right: calc(((100vw - 100%) / 2));
+
     @include large-and-up {
       margin-top: 96px;
       margin-bottom: 60px;
@@ -161,47 +165,6 @@
 
     .formblock-flex .en__field {
       width: 100%;
-    }
-
-    .en__field__element {
-      position: relative;
-
-      input[type=text],
-      select,
-      input[type=email],
-      input[type=tel] {
-        border: 1px solid #1a1a1a;
-        border-radius: 0;
-        margin-bottom: 20px;
-
-        &.is-invalid {
-          border: 1px solid #ff3333;
-          margin-bottom: 6px;
-        }
-      }
-    }
-
-    .invalid-feedback {
-      color: #ff3333;
-      font-weight: bold;
-      margin: 0;
-      padding: 0;
-      background: none;
-    }
-  }
-
-  .en__field__top__label {
-    position: absolute;
-    top: -.6rem;
-    background: white;
-    left: $sp-1;
-    padding: 0 8px;
-    font-weight: 600;
-    font-size: .75rem;
-
-    html[dir="rtl"] & {
-      left: auto;
-      right: $sp-1;
     }
   }
 }
