PLANET-6542 Disable search button when search input is empty
This is about the new navbar behaviour, it shouldn't confuse users and lead them to the search page by accident

--- a/assets/src/scss/layout/navbar/_search.scss
+++ b/assets/src/scss/layout/navbar/_search.scss
@@ -71,6 +71,10 @@
   visibility: hidden;
 }
 
+#search_input:placeholder-shown ~ button.nav-search-btn {
+  pointer-events: none;
+}
+
 #search_input::-webkit-search-decoration,
 #search_input::-webkit-search-cancel-button,
 #search_input::-webkit-search-results-button,
