--- a/templates/single.twig
+++ b/templates/single.twig
@@ -60,7 +60,7 @@
 				</div>
 				<h1 class="page-header-title">{{ post.title|raw }}</h1>
 				<div class="single-post-meta">
-					{% if post.author.avatar %}
+					{% if not post.get_author_override and post.author.avatar %}
 						<img itemprop="image" class="author-pic"
 							src="{{ fn('get_avatar_url', post.author.id, {'size' : 50, 'default': 'mm'}) }}"
 							alt="{{ post.author.avatar }}">
