--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -38,6 +38,7 @@ Text Domain: planet4-master-theme
 @import "layout/breadcrumbs";
 @import "layout/blocks";
 @import "layout/cookies";
+@import "layout/cookies-settings";
 @import "layout/footer";
 @import "layout/footer-social-media";
 @import "layout/forms";
