PLANET-6308: Release ENForm wysiwyg block
Ref: https://jira.greenpeace.org/browse/PLANET-6308

Remove old block code
Remove beta mention
Keep content in place on frontend
Fix counter disappearance

--- a/assets/src/styles/blocks/Counter.scss
+++ b/assets/src/styles/blocks/Counter.scss
@@ -104,3 +104,8 @@
     font-weight: bold;
   }
 }
+
+.wp-block-planet4-blocks-counter.is-style-en-forms-bar,
+.wp-block-planet4-blocks-counter .counter-style-en-forms-bar {
+  display: none;
+}
