--- a/assets/src/styles/blocks/ENForm/ENFormStyle.scss
+++ b/assets/src/styles/blocks/ENForm/ENFormStyle.scss
@@ -5,9 +5,9 @@
 
 // EN Blocks
 @import "components/enform";
-//@import "components/enform-full-width-bg";
-//@import "components/enform-full-width";
-//@import "components/enform-side-style";
+@import "components/enform-full-width-bg";
+@import "components/enform-full-width";
+@import "components/enform-side-style";
 // Campaigns - mixins
 @import "campaigns/mixins";
 // Campaigns - themes
