--- a/templates/navigation-bar-new.twig
+++ b/templates/navigation-bar-new.twig
@@ -147,5 +147,5 @@
 		</button>
 	</div>
 	<div class="top-navigation-overlay"></div>
-	{% include 'country_selector_banner.twig' %}
+	{% include 'country_selector_banner.twig' ignore missing %}
 </section>
