Follow up reviews
- Add a script file
- Render the block from the script
- Move Styles to webpack
- Diferenciate the active color against the hover color

--- a/assets/src/styles/blocks/ShareButtons/ShareButtonsStyles.scss
+++ b/assets/src/styles/blocks/ShareButtons/ShareButtonsStyles.scss
@@ -1,10 +1,14 @@
+@import "../../master-theme/assets/src/scss/base/colors";
+
 @mixin sharedStyles($color) {
   background: $color;
 
-  &:hover,
-  &:focus,
-  &:active {
+  &:hover {
     background: darken($color, 20%);
+  }
+
+  &:active {
+    background: darken($color, 10%);
   }
 }
 
