--- a/templates/tease-author.twig
+++ b/templates/tease-author.twig
@@ -45,6 +45,13 @@
 
 		<div class="search-result-item-info">
 			<span class="search-result-item-date">{{ post.post_date|date }}</span>
+			{% set reading_time = post.reading_time %}
+			{% if reading_time %}
+				<span class="single-post-meta-bullet" aria-hidden="true">&#8226;</span>
+				<span class="single-post-meta-readtime">
+					{{ __( '%d min read', 'planet4-master-theme' )|format(reading_time) }}
+				</span>
+			{% endif %}
 		</div>
 
 		<p class="search-result-item-content">{{ post.post_excerpt|excerpt( 30 )|e('wp_kses_post')|raw }}</p>
