--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -21,6 +21,7 @@
 @import "blocks/HappypointEditor";
 @import "blocks/OldENForm/ENFormEditor";
 @import "blocks/TakeActionBoxout/edit";
+@import "blocks/CookiesEditor";
 
 @import "components/LayoutSelector";
 @import "components/EmptyMessage";
