Allow inserting raw HTML in base template
* This way we can generate the inner HTML using core blocks and output
it where it needs to be.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -31,9 +31,8 @@
 		{% include 'blocks/header.twig' %}
 	{% endif %}
 
-	{% block content %}
-		Sorry, no content
-	{% endblock %}
+	{% if raw_content %}{{ raw_content|raw }}{% endif %}
+	{% block content  %}{% endblock %}
 
 	{% if sidebar %}
 		<aside class="layout-sidebar">
