Add author template
Read query loop from file

* Still works for "inherit from query".

Add list view and make it look like Articles

* By making it output the same classes.
* Add a small block for outputting the author link in our format.

Feature toggle to revert to old behavior.

Feature toggle to enable grid view.
* The template already existed so adding a temporary toggle to check it.

Use date format from settings
* Just like our Articles block, leaving the date format empty makes it
pull from the same setting (General > Date Format).

Use same separators as Articles
* That way they're already styled the same and we can change them for
both in one place.

Additional CSS to ensure same spacing as articles
* Might remove this later if not needed. Now it should look entirely the
same as Articles.

Fix for font size not applying to inner p
* WP uses an inner p tag we can't change to directly have the CSS class.
* Hard code 1rem for now, the block can't easily pull from the same
value because Articles CSS uses inherit.

Add responsive featured image block

* Simpler variant of the core block.
* Without: attribute for link, as only usage has one. And some other
stuff.
* With: sizes attribute that matches the usage generated using
respImageLint.

Remove toggle on production to allow merging

* Still need to sort Cloudflare, so could be nice to merge already.

Add Roboto font to pagination

* Missed this earlier.

Ensure pseudo element is on the right side in RTL

* I'm not sure if this is a bug, or intended browser behavior. Without
`display: inline-block` it would put the "#" symbol of the first symbol
all the way to the right on RTL, and all the other ones to the left.

Move down excerpt, remove upper pagination for now

* Based on UAT feedback.

--- a/templates/tag.twig
+++ b/templates/tag.twig
@@ -27,6 +27,7 @@
 	</div>
 
 	<div class="page-content container">
+		{{ query_loop|raw }}
 		{% for name, block in blocks %}
 			{{ fn('do_blocks', block )|raw }}
 		{% endfor %}
