Exclude page header if raw content is passed
* The post title it gets on the author page is the author's latest
post's title. This is because WordPress uses some weird global
variables.
* Instead for now I'll make it use the author bio block, which is the
closest available.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -27,7 +27,7 @@
 	{% endif %}
 	{% include 'sidebar.twig' with data_nav_bar %}
 
-	{% if not post.password_required %}
+	{% if not post.password_required and not raw_content %}
 		{% include 'blocks/header.twig' %}
 	{% endif %}
 
