--- a/assets/src/scss/layout/navbar/_search.scss
+++ b/assets/src/scss/layout/navbar/_search.scss
@@ -27,6 +27,16 @@
         display: none;
       }
     }
+
+    @include small-and-less {
+      @supports not (inset-inline-start: 0) {
+        left: 100vw;
+
+        html[dir="rtl"] & {
+          left: -100vw;
+        }
+      }
+    }
   }
 
   @include x-large-and-up {
@@ -60,6 +70,18 @@
   line-height: $menu-height;
   padding-inline: 12px 8px;
   width: auto;
+
+  @include small-and-less {
+    @supports not (padding-inline: 12px 8px) {
+      padding-right: 12px;
+      padding-left: 8px;
+
+      html[dir="rtl"] & {
+        padding-right: 8px;
+        padding-left: 12px;
+      }
+    }
+  }
 
   @include x-large-and-up {
     color: inherit;
@@ -115,6 +137,10 @@
 
   html[dir="rtl"] & {
     float: left;
+  }
+
+  @include small-and-less {
+    margin-inline-end: 16px;
   }
 
   @include x-large-and-up {
