Fix issue on table
- Reproduced on iPad 7 gen OS 13

--- a/assets/src/scss/layout/navbar/_search.scss
+++ b/assets/src/scss/layout/navbar/_search.scss
@@ -24,7 +24,14 @@
 
     @include medium-and-less {
       @supports not (inset-inline-start: 0) {
-        left: 0;
+        left: 100%;
+        margin: auto;
+        width: 100vw;
+
+        html[dir="rtl"] & {
+          left: auto;
+          right: 100%;
+        }
       }
 
       #nav-main.open & {
