--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -37,6 +37,7 @@ Text Domain: planet4-master-theme
 // Layout
 @import "layout/breadcrumbs";
 @import "layout/blocks";
+@import "layout/block-classes";
 @import "layout/cookies";
 @import "layout/footer";
 @import "layout/footer-social-media";
