--- a/assets/src/scss/base/_mixins.scss
+++ b/assets/src/scss/base/_mixins.scss
@@ -12,6 +12,13 @@
   }
 }
 
+// Mobile to Large (From 576px to 992px)
+@mixin small-to-large {
+  @media (min-width: #{$small-width}) and (max-width: #{$large-width}) {
+    @content;
+  }
+}
+
 // Tablet & Up (greater than 768px)
 @mixin medium-and-up {
   @media (min-width: #{$medium-width}) {
