Change @media query
- To avoid overrides large styles

--- a/assets/src/scss/base/_mixins.scss
+++ b/assets/src/scss/base/_mixins.scss
@@ -14,7 +14,7 @@
 
 // Mobile to Large (From 576px to 992px)
 @mixin small-to-large {
-  @media (min-width: #{$small-width}) and (max-width: #{$large-width}) {
+  @media (min-width: #{$small-width}) and (max-width: #{$large-width - 1}) {
     @content;
   }
 }
