PLANET-6510: Menu tabs CSS
Add more nav link variables to fit light theme and mobile menu
Underline animation is handled by a border-bottom
Fix menu height to 60px on width < 992px

--- a/assets/src/scss/layout/_page-header.scss
+++ b/assets/src/scss/layout/_page-header.scss
@@ -78,6 +78,12 @@
   }
 }
 
+.with-mobile-tabs ~ .page-header {
+  @include medium-and-less {
+    padding-top: 140px;
+  }
+}
+
 .page-header-background {
   overflow: hidden;
   position: absolute;
