--- a/assets/src/scss/layout/navbar/_site-logo.scss
+++ b/assets/src/scss/layout/navbar/_site-logo.scss
@@ -1,5 +1,9 @@
 .site-logo {
-  line-height: $menu-height;
+  line-height: $menu-height-small;
+
+  @include large-and-up {
+    line-height: $menu-height-large;
+  }
 
   img {
     height: 26px;
