--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -50,6 +50,12 @@ $min-height: 40px;
   }
 }
 
+.with-mobile-tabs + .page-content {
+  @include medium-and-less {
+    padding-top: calc(#{$menu-height-small} + 50px);
+  }
+}
+
 .single-campaign {
   .page-content {
     > p:last-child {
