Update Card's width from Covers
- Apply to Take Action, Content and Campaign Covers

--- a/assets/src/styles/blocks/Covers/styles/CampaignCovers.scss
+++ b/assets/src/styles/blocks/Covers/styles/CampaignCovers.scss
@@ -79,6 +79,11 @@
       @include x-large-and-up {
         min-width: 356px;
       }
+
+      @include xx-large-and-up {
+        width: 416px;
+        min-width: 416px;
+      }
     }
 
     .carousel-control-prev,
