--- a/assets/src/styles/blocks/Covers/styles/ContentCovers.scss
+++ b/assets/src/styles/blocks/Covers/styles/ContentCovers.scss
@@ -26,6 +26,11 @@
         width: 261px;
         min-width: 261px;
       }
+
+      @include xx-large-and-up {
+        width: 306px;
+        min-width: 306px;
+      }
     }
 
     .carousel-control-prev,
