--- a/assets/src/styles/blocks/Covers/styles/TakeActionCovers.scss
+++ b/assets/src/styles/blocks/Covers/styles/TakeActionCovers.scss
@@ -27,6 +27,11 @@
         width: 356px;
         min-width: 356px;
       }
+
+      @include xx-large-and-up {
+        width: 416px;
+        min-width: 416px;
+      }
     }
 
     .carousel-control-prev,
