--- a/templates/navigation-bar-new.twig
+++ b/templates/navigation-bar-new.twig
@@ -156,12 +156,11 @@
 			<ul>
 				{% for key,item in navbar_menu_items %}
 				<li class="nav-item {{ item.class }} {{ item == item.current ? 'active' : '' }}">
-					{% set link_ga_action = item.title %}
 					<a
 						class="nav-link"
 						href="{{ item.get_link }}"
 						data-ga-category="Menu Navigation"
-						data-ga-action="{{ link_ga_action }}"
+						data-ga-action="{{ item.title }}"
 						data-ga-label="{{ page_category }}">
 							{{ item.title }}
 					</a>
