--- a/assets/src/scss/layout/_cookies-settings.scss
+++ b/assets/src/scss/layout/_cookies-settings.scss
@@ -22,28 +22,26 @@
     }
   }
 
-  .cookies-settings-header {
-    padding: 0 $sp-3;
-    width: 100vw;
-    margin-bottom: $sp-2;
-    border-bottom: solid 1px $grey-10;
-    margin-inline-start: -$sp-3;
-
-    h4 {
-      font-size: 16px;
-      margin-bottom: 8px;
-    }
+  .cookies-settings-header h4 {
+    font-size: 16px;
+    margin-bottom: $sp-1;
   }
 
   .cookies-settings-details {
     max-height: 40vh;
-    overflow: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: calc(100% + 2 * #{$sp-3});
+    margin-inline-start: -$sp-3;
+    padding: $sp-2 $sp-3 0 $sp-3;
+    border-top: solid 1px $grey-10;
+    border-bottom: solid 1px $grey-10;
 
     .custom-control-description,
     .custom-control input[type="checkbox"] ~ .custom-control-description {
       font-weight: 700;
       font-size: 14px;
-      margin-bottom: 16px;
+      margin-bottom: $sp-2;
     }
   }
 
@@ -60,10 +58,7 @@
   .cookies-settings-buttons {
     display: flex;
     justify-content: space-between;
-    border-top: solid 1px $grey-10;
-    padding: $sp-3 $sp-3 0 $sp-3;
-    width: 100vw;
-    margin-inline-start: -$sp-3;
+    margin-top: $sp-3;
 
     .btn {
       width: calc(50% - 8px);
@@ -77,7 +72,7 @@
 
       .btn-primary {
         width: 100%;
-        margin-top: 16px;
+        margin-top: $sp-2;
       }
     }
   }
@@ -87,11 +82,7 @@
 
     .cookies-settings-details {
       max-height: 300px;
-    }
-
-    .cookies-settings-header,
-    .cookies-settings-buttons {
-      width: calc(100% + 64px);
+      width: calc(100% + 2 * #{$sp-4});
       margin-inline-start: -$sp-4;
       padding-left: $sp-4;
       padding-right: $sp-4;
@@ -118,8 +109,16 @@
       }
 
       .btn {
-        padding: 0 16px;
+        padding: 0 $sp-2;
         width: auto;
+      }
+    }
+
+    .close-cookies-settings {
+      right: -$sp-2;
+
+      html[dir="rtl"] & {
+        left: -$sp-2;
       }
     }
   }
