--- a/templates/cookies/cookies_settings.twig
+++ b/templates/cookies/cookies_settings.twig
@@ -15,7 +15,7 @@
 		{% if necessary_cookies_name is not empty %}
 			<div class="custom-control-description">{{ necessary_cookies_name }} <span class="always-enabled">{{__('Always enabled', 'planet4-master-theme')}}</span></div>
 			{% if necessary_cookies_description is not empty %}
-				<p>{{ necessary_cookies_description }}</p>
+				<p>{{ necessary_cookies_description|e('wp_kses_post')|raw }}</p>
 			{% endif %}
 		{% endif %}
 		{% if cookies.enable_analytical_cookies and analytical_cookies_name is not empty %}
@@ -24,7 +24,7 @@
 				<span class="custom-control-description">{{ analytical_cookies_name }}</span>
 			</label>
 			{% if analytical_cookies_description is not empty %}
-				<p>{{ analytical_cookies_description }}</p>
+				<p>{{ analytical_cookies_description|e('wp_kses_post')|raw }}</p>
 			{% endif %}
 		{% endif %}
 		{% if all_cookies_name is not empty %}
@@ -33,15 +33,34 @@
 				<span class="custom-control-description">{{ all_cookies_name }}</span>
 			</label>
 			{% if all_cookies_description is not empty %}
-				<p>{{ all_cookies_description }}</p>
+				<p>{{ all_cookies_description|e('wp_kses_post')|raw }}</p>
 			{% endif %}
 		{% endif %}
 	</div>
 	<div class="cookies-settings-buttons {{ cookies.enable_reject_all_cookies ? 'with-reject-all' : '' }}">
 		{% if cookies.enable_reject_all_cookies %}
-			<button class="btn btn-secondary reject-all-cookies">{{ __( 'Reject all', 'planet4-master-theme' ) }}</button>
+			<button
+				class="btn btn-secondary reject-all-cookies"
+				data-ga-category="Cookies box"
+				data-ga-action="Reject all"
+			>
+				{{ __( 'Reject all', 'planet4-master-theme' ) }}
+			</button>
 		{% endif %}
-		<button class="btn btn-secondary allow-all-cookies">{{ __( 'Allow all', 'planet4-master-theme' ) }}</button>
-		<button class="btn btn-primary" id="save-cookies-settings">{{ __( 'Save preferences', 'planet4-master-theme' ) }}</button>
+		<button
+			class="btn btn-secondary allow-all-cookies"
+			data-ga-category="Cookies box"
+			data-ga-action="Allow all"
+		>
+			{{ __( 'Allow all', 'planet4-master-theme' ) }}
+		</button>
+		<button
+			class="btn btn-primary"
+			id="save-cookies-settings"
+			data-ga-category="Cookies box"
+			data-ga-action="Save preferences"
+		>
+			{{ __( 'Save preferences', 'planet4-master-theme' ) }}
+		</button>
 	</div>
 </div>
