--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -70,13 +70,77 @@ $navbar-default-height: 60px;
 
     height: 44px;
     line-height: 40px;
+
+    .chevron {
+      display: none;
+    }
   }
 
   .nav-donate {
-    padding: 16px 0;
+    padding: $sp-2 0;
+    position: relative;
+
+    .donate-dropdown {
+      display: none;
+    }
 
     @include large-and-up {
       padding: 0;
+
+      .btn-donate .chevron {
+        margin-inline-start: $sp-1;
+        height: 10px;
+        width: 6px;
+        display: inline-block;
+        mask-image: url("../../images/chevron.svg");
+        mask-repeat: no-repeat;
+        mask-size: contain;
+        mask-position: center;
+        background-repeat: no-repeat;
+        background-color: currentColor;
+        transform: rotate(90deg);
+        transition: transform 0.3s linear;
+      }
+
+      &:hover {
+        .btn-donate .chevron {
+          transform: rotate(-90deg);
+        }
+
+        .donate-dropdown {
+          display: block;
+          position: absolute;
+          background: white;
+          list-style: none;
+          min-width: 200px;
+          border-radius: 4px;
+          padding: 0;
+          text-align: start;
+
+          li {
+            a {
+              color: $grey-80;
+              font-size: 16px;
+              padding: $sp-2 $sp-3;
+              display: block;
+            }
+
+            &:hover {
+              background: $grey-10;
+            }
+
+            &:first-child {
+              border-top-left-radius: 4px;
+              border-top-right-radius: 4px;
+            }
+
+            &:last-child {
+              border-bottom-left-radius: 4px;
+              border-bottom-right-radius: 4px;
+            }
+          }
+        }
+      }
     }
   }
 }
@@ -185,7 +249,7 @@ $navbar-default-height: 60px;
     height: auto;
   }
 
-  ul {
+  > ul {
     list-style-type: none;
     margin: 0;
     padding-inline: 40px 12px;
