Try to use circleci to create symlinks

--- a/templates/head/service_worker.twig
+++ b/templates/head/service_worker.twig
@@ -1,6 +1,6 @@
 <script>
 	if (navigator.serviceWorker) {
-		navigator.serviceWorker.register('/service-worker.js', { scope: './' })
+		navigator.serviceWorker.register('/service-worker.js')
 			.then(() => console.log('Success!'))
 			.catch(error => console.log('Failure: ' + error));
 	}
