--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -14,7 +14,7 @@
 
 	{% include 'blocks/p4_structured_data.twig' %}
 
-	{% include 'service-worker.twig' %}
+	{% include 'head/service_worker.twig' %}
 
 	<link rel="pingback" href="{{ site.pingback_url }}">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
