Restyle author archive page
* Reorder mark up.
* Make it a flex layout for now.

Fix needless padding from search styles

* See code comment.

TMP variable to test different sizes

* Apparently just the width was needed, the other lines that mention
this size were not really doing anything.

Limit size of button on mobile

* Use 50% of the screen. Add variable to make it easier to modify while
testing.

Margin author image only on mobile

* Didn't look good on other sizes.

Align items at start to keep image on the left

* Otherwise it didn't play well with a missing description.

Ensure author details take up remaining space

* For some reason it even caused a break inside of a word if I didn't
add this.

Make author details centered

* Gotta love flexbox.

Unnest classes only used on author page

* So that it's clear the ".author" selector contents are actual
overrides.

Add separator block under bio

* For now hard code the style on the author page CSS.

Center title

* on mobile

Ensure title and description alway shown

* Could be author.avatar is always truthy so I didn't notice earlier.

Ensure author page title is centered

* Unset on all sizes, as on larger screens the title is next to the
image so it doesn't make sense to preserve the 80%.

--- a/assets/src/scss/pages/_author.scss
+++ b/assets/src/scss/pages/_author.scss
@@ -1,29 +1,69 @@
 .author {
+  .page-header {
+    display: flex;
+    justify-content: flex-start;
+    gap: 40px;
+    flex-wrap: wrap;
+
+    @include medium-and-up {
+      flex-wrap: nowrap;
+    }
+  }
+
+  h1 {
+    max-width: 100%;
+  }
+
+  .author-pic {
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  @include mobile-only {
+    h1 {
+      text-align: center;
+    }
+  }
+
+  .wp-block-separator {
+    border-width: 1px;
+    border-bottom-color: #d4d4d4;
+  }
+
   .search-result-list-item {
     font-family: $roboto;
   }
 
-  .author-info {
-    .author-image {
-      width: auto;
+  // Search uses absolutely positioned buttons, for absolutely no reason. The button effectively is
+  // styled to look like a regularly positioned element by giving the next element a large amount of top padding.
+  // @see https://github.com/greenpeace/planet4-master-theme/blob/a4ddd15e9527c4b8fe4f93bd72c423f7bb282992/assets/src/scss/pages/search/_filter-sidebar.scss#L103-L104
+  // @see https://github.com/greenpeace/planet4-master-theme/blob/a4ddd15e9527c4b8fe4f93bd72c423f7bb282992/assets/src/scss/pages/search/_search-results.scss#L17-L19
+  // I avoided changing that code for now.
+  .multiple-search-result {
+    padding-top: 0;
+  }
+}
 
-      @include small-and-up {
-        width: 300px;
-        height: 300px;
-        overflow: hidden;
-      }
+.author-details {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
-      img {
-        width: auto;
+.author-image {
+  flex-shrink: 0;
+  max-width: 50%;
 
-        @include small-and-up {
-          width: 100%;
-        }
-      }
-    }
+  @include small-and-up {
+    width: 300px;
   }
 
-  .author-bio {
-    margin-top: 32px;
+  @include mobile-only {
+    margin: 0 auto;
+  }
+
+  img {
+    width: 100%;
   }
 }
