PLANET-6513 Implement the new post tags
These look more like buttons and are positioned at the end of the post content, before the author block. Another notable change in this commit is the addition of a narrow-container class for post content width.

--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -261,3 +261,31 @@ button.load-more-mt {
     transition: opacity 400ms;
   }
 }
+
+.post-tag-button {
+  _-- {
+    border-color: $link-color;
+    color: $link-color;
+    background-color: $white;
+    font-weight: 500;
+
+    &:visited {
+      color: $link-color;
+    }
+
+    &:hover {
+      background-color: $link-color;
+      color: $white;
+    }
+
+    &:active {
+      background-color: $link-color;
+      color: $white;
+    }
+  }
+  margin-inline-end: $sp-2;
+  margin-bottom: $sp-2;
+  line-height: 2.3;
+  padding: 0 $sp-2;
+  transition-duration: 100ms;
+}
