--- a/templates/single-password.twig
+++ b/templates/single-password.twig
@@ -8,7 +8,7 @@
 			<div class="page-header-background"></div>
 		</header>
 
-		<div class="container">
+		<div class="container narrow-container">
 			<div class="post-content">
 				<form id="password-form" class="password-form" action="{{login_url}}?action=postpass&_wp_http_referer={{ post.link|url_encode }}" method="post">
 					<div class="mb-3">
