--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -2,19 +2,16 @@
 .single-attachment,
 .single-idea {
   @include large-and-up {
-    .post-content,
-    .author-block,
-    .page-header {
+    .narrow-container {
       margin-left: auto;
       margin-right: auto;
       max-width: 776px;
+      padding: 0;
     }
   }
 
   @include x-large-and-up {
-    .post-content,
-    .author-block,
-    .page-header {
+    .narrow-container {
       max-width: 736px;
     }
   }
@@ -91,5 +88,9 @@
     @include medium-and-up {
       padding-top: 24px;
     }
+  }
+
+  .post-tags {
+    margin-bottom: $sp-2;
   }
 }
