--- a/templates/blocks/author_profile.twig
+++ b/templates/blocks/author_profile.twig
@@ -1,5 +1,5 @@
 {% if ( post.author.name and post.author.description ) %}
-	<div class="container clearfix">
+	<div class="container narrow-container clearfix">
 		<div class="author-block" itemscope itemtype="http://schema.org/Person">
 			{% if ( post.author.avatar ) %}
 				<figure class="author-block-image d-none d-sm-none d-md-block">
