--- a/templates/single-attachment.twig
+++ b/templates/single-attachment.twig
@@ -6,7 +6,7 @@
 
 	<article id="post-{{ post.ID }}">
 
-		<div class="container">
+		<div class="container narrow-container">
 			<header class="page-header">
 				<h1 class="page-header-title">{{ post.title|raw }}</h1>
 				<div class="single-post-meta">
@@ -23,7 +23,7 @@
 		</div>
 
 		<!-- Attachment Post Block Start -->
-		<div class="container">
+		<div class="container narrow-container">
 			<div class="post-content">
 				<article class="post-details clearfix">
 					{{ post.content|e('wp_kses_post')|raw }}
