--- a/templates/single.twig
+++ b/templates/single.twig
@@ -6,7 +6,7 @@
 
 	<article id="post-{{ post.ID }}">
 
-		<div class="container">
+		<div class="container narrow-container">
 			<header class="page-header">
 				<div class="top-page-tags">
 					{% if ( page_type ) %}
@@ -20,7 +20,7 @@
 						</a>
 					{% endif %}
 
-					{% if ( page_type and (post.issues_nav_data or post.tags) ) %}
+					{% if ( page_type and post.issues_nav_data ) %}
 						<span class="main-tag-chevron" aria-hidden="true"></span>
 					{% endif %}
 
@@ -83,7 +83,7 @@
 		</div>
 
 		<!-- Post Block Start -->
-		<div class="container">
+		<div class="container narrow-container">
 			<div class="post-content">
 				<article class="post-details clearfix">
 					{{ post.content|e('wp_kses_post')|raw }}
@@ -91,6 +91,20 @@
 						{{ fn('do_blocks', post.take_action_boxout )|raw }}
 					{% endif %}
 				</article>
+			</div>
+			<div class="post-tags">
+				{% if ( post.tags ) %}
+					{% for tag in post.tags %}
+						<a
+							class="btn post-tag-button"
+							href="{{ tag.link }}"
+							data-ga-category="Post"
+							data-ga-action="Navigation Tag"
+						>
+							<span aria-label="hashtag">#</span><span>{{ tag.name|e('wp_kses_post')|raw }}</span>
+						</a>
+					{% endfor %}
+				{% endif %}
 			</div>
 		</div>
 		<!-- Post Page Block End -->
