PLANET-6651 Increase padding top in posts when mobile tabs are active
This fix had been implemented for pages already, but not for posts

--- a/assets/src/scss/layout/_page-header.scss
+++ b/assets/src/scss/layout/_page-header.scss
@@ -78,9 +78,12 @@
   }
 }
 
-.with-mobile-tabs ~ .page-header {
-  @include medium-and-less {
-    padding-top: 140px;
+.with-mobile-tabs {
+  ~ .page-header,
+  ~ article .page-header {
+    @include medium-and-less {
+      padding-top: 140px;
+    }
   }
 }
 
