PLANET-6651 Simplify 404 page CSS code
This is so that it doesn't override the page header settings such as padding top

--- a/assets/src/scss/pages/_404.scss
+++ b/assets/src/scss/pages/_404.scss
@@ -1,12 +1,6 @@
 .page-404-page {
   .page-header {
-    color: $grey-80;
-    min-height: 1200px;
-    padding-top: 80px;
-
-    @include medium-and-up {
-      padding-top: 110px;
-    }
+    min-height: 100vh;
 
     .page-header-subtitle {
       margin-top: 150px;
