PLANET-6545 Use h2 in CarouselHeader instead of h1
This is to avoid SEO reports issues

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
@@ -69,6 +69,7 @@
     font-size: 14px;
     border: none;
     outline: none;
+    white-space: nowrap;
 
     .dashicon {
       margin-inline-end: 10px;
