--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -18,5 +18,6 @@
 @import "layout/page-header";
 @import "layout/breadcrumbs";
 @import "layout/forms";
+@import "layout/gravity-forms";
 
 @import "editorOverrides";
