--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -42,6 +42,7 @@ Text Domain: planet4-master-theme
 @import "layout/footer";
 @import "layout/footer-social-media";
 @import "layout/forms";
+@import "layout/gravity-forms";
 @import "layout/page-header";
 @import "layout/page-section";
 @import "layout/skewed-overlay";
