Add styles that were in the plugin using submodule
* The plugin loaded these from the theme to then add to its own editor
style file. Besides this one other styles were declared in both files,
so loaded twice.

--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -13,6 +13,7 @@
 
 @import "base/icons";
 @import "components/buttons";
+@import "components/share-buttons";
 @import "base/typography";
 @import "layout/tables";
 @import "layout/page-header";
