PLANET-6555 Style Gravity Forms
This is without using Sass extend functionality which resulted in a massive frontend CSS file.

--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -1,6 +1,9 @@
 .btn,
 .wp-block-button a,
-.wp-block-file a.wp-block-file__button {
+.wp-block-file a.wp-block-file__button,
+.gfield button:not(.add_list_item):not(.delete_list_item),
+.gform_button_select_files,
+.gform_footer input[type="submit"] {
   --button-- {
     font-family: $roboto;
     text-align: center;
@@ -63,7 +66,9 @@
   }
 }
 
-.btn-small {
+.btn-small,
+.gfield button:not(.add_list_item):not(.delete_list_item),
+.gform_button_select_files {
   font-size: $font-size-xxs;
   line-height: 2.8;
 }
@@ -76,7 +81,8 @@
 $primary-button-box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
 
 .btn-primary,
-.wp-block-button.is-style-cta a {
+.wp-block-button.is-style-cta a,
+.gform_footer input[type="submit"] {
   --button-primary-- {
     background: $orange;
     color: $white;
@@ -104,7 +110,9 @@ $primary-button-box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
 .btn-secondary,
 .wp-block-button.is-style-secondary a,
 [class="wp-block-button"] a,
-.wp-block-file a.wp-block-file__button {
+.wp-block-file a.wp-block-file__button,
+.gfield button:not(.add_list_item):not(.delete_list_item),
+.gform_button_select_files {
   --button-secondary-- {
     background: transparentize($white, .7);
     border-color: $dark-blue;
