--- a/assets/src/scss/layout/navbar/_search.scss
+++ b/assets/src/scss/layout/navbar/_search.scss
@@ -85,7 +85,7 @@
   color: var(--top-navigation--color, $grey-80);
   display: inline-block;
   flex-grow: 1;
-  font-size: $font-base-size;
+  font-size: $font-size-sm;
   line-height: $menu-height;
   padding-inline: 12px 8px;
   width: auto;
