--- a/assets/src/scss/layout/navbar/languages.scss
+++ b/assets/src/scss/layout/navbar/languages.scss
@@ -3,7 +3,7 @@
   border: none;
   color: inherit;
   display: none;
-  font-size: $font-base-size;
+  font-size: $font-size-sm;
   font-weight: 700;
   padding: 0 20px;
 
