--- a/templates/burger-menu.twig
+++ b/templates/burger-menu.twig
@@ -1,15 +1,15 @@
-<div id="burger-menu">
+<div id="nav-main" class="burger-menu d-lg-none">
   <button class="nav-menu-close" type="button"
     aria-label="{{ __( "Close navigation mobile menu", "planet4-master-theme" ) }}"
     aria-expanded="false"
     data-bs-toggle="open"
-    data-bs-target="#burger-menu">
+    data-bs-target="#nav-main">
     <span class="visually-hidden">
       {{ __( "Close navigation mobile menu", "planet4-master-theme" ) }}
     </span>
   </button>
 
-	<div class="burger-menu-header">
+  <div class="burger-menu-header">
     <a class="site-logo" href="{{ data_nav_bar.home_url }}">
       {% include "blocks/site_logo.twig" %}
     </a>
@@ -44,8 +44,8 @@
 				<li class="burger-menu-item nav-item">
 					<a
 						class="nav-link"
-						href="/"
-						data-ga-category="Submenu Navigation"
+						href="{{ site.url }}"
+						data-ga-category="Menu Navigation"
 						data-ga-action="Home"
 						data-ga-label="{{ page_category }}">
 							{{ __( "Home", "planet4-master-theme" ) }}
@@ -56,7 +56,7 @@
 					{% include "burger-menu-items.twig" with { menu: navbar_menu_items } %}
 				{% endif %}
 
-				{% if donate_menu_items is not empty %}
+				{% if donate_menu_items is not empty and dropdown_menu %}
 					{% include "burger-menu-items.twig" with { menu: donate_menu_items } %}
 				{% endif %}
 			</ul>
