--- a/templates/navigation-bar-new.twig
+++ b/templates/navigation-bar-new.twig
@@ -1,6 +1,7 @@
 {% set header_classes = 'top-navigation navbar'
 	~ (custom_styles.nav_border == 'border' ? ' navigation-bar_border' : '')
 	~ (mobile_tabs_menu ? ' with-mobile-tabs' : '')
+	~ (dropdown_menu ? ' with-dropdown-menu' : '')
 %}
 <section id="header" class="{{ header_classes }}">
 	{% set data_ga_attrs = 'data-ga-category="Menu Navigation" data-ga-action="Menu" data-ga-label="' ~ page_category ~ '"' %}
@@ -11,7 +12,7 @@
 		data-ga-label="{{ page_category }}"
 		aria-expanded="false"
 		data-bs-toggle="open"
-		data-bs-target="#burger-menu">
+		data-bs-target="#nav-main">
 		{{ 'menu'|svgicon|replace({'<svg': "<svg " ~ data_ga_attrs })|raw }}
 		<span class="visually-hidden">
 			{{ __( 'Menu', 'planet4-master-theme' ) }}
@@ -20,7 +21,7 @@
 	<a class="site-logo" href="{{ data_nav_bar.home_url }}">
 		{% include 'blocks/site_logo.twig' %}
 	</a>
-	<div id="nav-main">
+	<div id="nav-main-desktop" class="d-none d-lg-flex">
 		<nav id="nav-menu" class="nav-menu">
 			<ul>
 				{% for key,item in navbar_menu_items %}
@@ -41,31 +42,30 @@
 							{{ item.title }}
 					</a>
 
-					{% if item.children is not empty %}
+					{% if item.children is not empty and dropdown_menu %}
 						{% include 'navigation-submenu.twig' with { menu: item } %}
 					{% endif %}
 				</li>
 				{% endfor %}
 
-				{% if donate_menu_items|first is not null %}
+				{% if donate_menu_items is not empty %}
 					{% set donate_menu = donate_menu_items|first %}
 					<li class="nav-donate">
 						<a
-							class="btn btn-donate {{ donate_menu.children ? 'dropdown' : '' }}"
+							class="btn btn-donate {{ donate_menu.children and dropdown_menu ? 'dropdown' : '' }}"
 							href="{{ donate_menu.link }}"
 							data-ga-category="Menu Navigation"
 							data-ga-action="Donate"
 							data-ga-label="{{ page_category }}">
 								{{ donate_menu.title }}
 						</a>
-						{% if donate_menu.children is not empty %}
+						{% if donate_menu.children is not empty and dropdown_menu %}
 							{% include 'navigation-submenu.twig' with { menu: donate_menu } %}
 						{% endif %}
 					</li>
 				{% endif %}
 			</ul>
 		</nav>
-
 		{% set search_icon = 'search'|svgicon %}
 		{% set search_input_id = 'search_input' %}
 		{% set data_ga_attrs = 'data-ga-category="Menu Navigation" data-ga-action="Search" data-ga-label="' ~ page_category ~ '"' %}
@@ -84,41 +84,60 @@
 				</span>
 			</button>
 		</div>
-	</div>
-	<form id="search_form" class="form nav-search-form" action="{{ data_nav_bar.home_url }}">
-		{% set search_label = __( 'Search', 'planet4-master-theme' ) %}
-		<input id="{{ search_input_id }}"
-			type="search"
-			name="s"
-			class="form-control"
-			placeholder="{{ search_label }}"
-			value="{{ data_nav_bar.search_query|e('wp_kses_post')|raw }}"
-			aria-label="{{ __( 'Search input', 'planet4-master-theme' ) }}"/>
-		<input id="orderby" type="hidden" name="orderby" value="{{ selected_sort ?? default_sort }}"/>
-		<button class="nav-search-btn"
-			aria-label="{{ __( 'Press return/enter or click to search', 'planet4-master-theme' ) }}"
-			type="submit"
-			data-ga-category="Menu Navigation"
-			data-ga-action="Search"
-			data-ga-label="{{ page_category }}"
-		>
-			{{ search_icon|replace({'<svg': "<svg " ~ data_ga_attrs })|raw }}
-			<span class="visually-hidden"
+		<form id="search_form" class="form nav-search-form" action="{{ data_nav_bar.home_url }}">
+			{% set search_label = __( 'Search', 'planet4-master-theme' ) %}
+			<input id="{{ search_input_id }}"
+				type="search"
+				name="s"
+				class="form-control"
+				placeholder="{{ search_label }}"
+				value="{{ data_nav_bar.search_query|e('wp_kses_post')|raw }}"
+				aria-label="{{ __( 'Search input', 'planet4-master-theme' ) }}"/>
+			<input id="orderby" type="hidden" name="orderby" value="{{ selected_sort ?? default_sort }}"/>
+			<button class="nav-search-btn"
+				aria-label="{{ __( 'Press return/enter or click to search', 'planet4-master-theme' ) }}"
+				type="submit"
 				data-ga-category="Menu Navigation"
 				data-ga-action="Search"
 				data-ga-label="{{ page_category }}"
 			>
-					{{ search_label }}
-			</span>
-		</button>
-		<button class="nav-search-clear"
-			aria-label="{{ __( 'Clear search', 'planet4-master-theme' ) }}"
-			type="button"
-			onclick="document.getElementById('{{ search_input_id }}').value=null;"
-		>
-			<span class="visually-hidden">{{ __( 'Clear search', 'planet4-master-theme' ) }}</span>
-		</button>
-	</form>
+				{{ search_icon|replace({'<svg': "<svg " ~ data_ga_attrs })|raw }}
+				<span class="visually-hidden"
+					data-ga-category="Menu Navigation"
+					data-ga-action="Search"
+					data-ga-label="{{ page_category }}"
+				>
+						{{ search_label }}
+				</span>
+			</button>
+			<button class="nav-search-clear"
+				aria-label="{{ __( 'Clear search', 'planet4-master-theme' ) }}"
+				type="button"
+				onclick="document.getElementById('{{ search_input_id }}').value=null;"
+			>
+				<span class="visually-hidden">{{ __( 'Clear search', 'planet4-master-theme' ) }}</span>
+			</button>
+		</form>
+		{% if site_languages is not empty %}
+			{% set current_lang = site_languages|filter(i => i.active)|first %}
+			<button class="nav-languages-toggle" type="button"
+				aria-label="{{ __( 'Choose language', 'planet4-master-theme' ) }}"
+				aria-expanded="false"
+				data-bs-toggle="open"
+				data-bs-target="#nav-languages"
+			>{{ current_lang.code|capitalize }}</button>
+			<nav id="nav-languages" class="nav-languages">
+				<ul>
+				{% for key,item in site_languages %}
+				<li class="nav-item {{ item.active ? 'current-language' : '' }}">
+					<a class="nav-link" href="{{ item.url }}">{{ item.native_name }}</a>
+					<span aria-hidden="true">&nbsp;|&nbsp;</span>
+				</li>
+				{% endfor %}
+				</ul>
+			</nav>
+		{% endif %}
+	</div>
 	<div class="nav-search-toggle-container medium-and-less">
 		<button class="nav-search-toggle" type="button"
 			aria-label="{{ data_nav_bar.navbar_search_toggle }}"
@@ -134,25 +153,6 @@
 			</span>
 		</button>
 	</div>
-	{% if site_languages is not empty %}
-		{% set current_lang = site_languages|filter(i => i.active)|first %}
-		<button class="nav-languages-toggle" type="button"
-			aria-label="{{ __( 'Choose language', 'planet4-master-theme' ) }}"
-			aria-expanded="false"
-			data-bs-toggle="open"
-			data-bs-target="#nav-languages"
-		>{{ current_lang.code|capitalize }}</button>
-		<nav id="nav-languages" class="nav-languages">
-			<ul>
-			{% for key,item in site_languages %}
-			<li class="nav-item {{ item.active ? 'current-language' : '' }}">
-				<a class="nav-link" href="{{ item.url }}">{{ item.native_name }}</a>
-				<span aria-hidden="true">&nbsp;|&nbsp;</span>
-			</li>
-			{% endfor %}
-			</ul>
-		</nav>
-	{% endif %}
 	{% if mobile_tabs_menu %}
 	<div id="nav-mobile">
 		<nav id="nav-mobile-menu">
@@ -176,4 +176,3 @@
 	{% include 'country_selector_banner.twig' ignore missing %}
 </section>
 {% include 'burger-menu.twig' %}
-
